--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "arktype": "^1.0.14-alpha",
     "axios": "^1.0.0",
     "express": "~4.18.1",
+    "marked": "^4.3.0",
+    "shiki": "^0.14.1",
+    "shiki-themes": "^0.2.7",
+    "socket.io-client": "^4.6.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nx/cypress": "16.3.1",
     "@nx/esbuild": "16.3.1",
     "@nx/eslint-plugin": "16.3.1",
     "@nx/jest": "16.3.1",
@@ -17,17 +23,22 @@
     "@nx/linter": "16.3.1",
     "@nx/node": "16.3.1",
     "@nx/vite": "16.3.1",
+    "@nx/web": "^16.3.1",
     "@nx/workspace": "16.3.1",
     "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
+    "@types/marked": "^4.0.8",
     "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "@vitejs/plugin-vue": "^4.2.3",
     "@vitest/coverage-c8": "^0.31.0",
     "@vitest/ui": "^0.31.0",
+    "cypress": "^12.11.0",
     "esbuild": "^0.17.17",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jsdom": "~20.0.3",
@@ -40,6 +51,7 @@
     "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
-    "vitest": "^0.31.0"
+    "vitest": "^0.31.0",
+    "vue": "^3.3.4"
   }
 }
