--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "marked": "^4.3.0",
     "shiki": "^0.14.1",
     "shiki-themes": "^0.2.7",
+    "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
+    "ts-morph": "^18.0.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -29,8 +31,8 @@
     "@types/jest": "^29.4.0",
     "@types/marked": "^4.0.8",
     "@types/node": "18.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitest/coverage-c8": "^0.31.0",
     "@vitest/ui": "^0.31.0",
@@ -46,7 +48,7 @@
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.0.2",
+    "typescript": "^5.0.4",
     "vite": "^4.3.4",
     "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
