--- a/error_samples/tsconfig.json
+++ b/error_samples/tsconfig.json
@@ -10,6 +10,7 @@
     "strict": true /* enable all strict type-checking options */,
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
+    "noErrorTruncation": true,
     "paths": {
       "@/*": ["./src/*"]
     }
