--- a/packages/tserr-server/.eslintrc.json
+++ b/packages/tserr-server/.eslintrc.json
@@ -4,11 +4,11 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {}
+      "rules": { "@typescript-eslint/no-non-null-assertion": "off" }
     },
     {
       "files": ["*.ts", "*.tsx"],
-      "rules": {}
+      "rules": { "@typescript-eslint/no-non-null-assertion": "off" }
     },
     {
       "files": ["*.js", "*.jsx"],
