formatting for supplements

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@typeholes/tserr-common": ["packages/tserr-common/src/index.ts"]
-    }
+    },
+    "noErrorTruncation": true
   },
   "exclude": ["node_modules", "tmp"]
 }
