--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jsdom": "~20.0.3",
     "nx": "16.3.1",
     "prettier": "^2.6.2",
+    "rollup-plugin-visualizer": "^5.9.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "^5.0.4",
