--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "ts-morph": "^18.0.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "vscode": "^1.1.37"
   },
   "devDependencies": {
     "@nx/cypress": "16.3.1",
