--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@typeholes/tserr-common": "^0.0.1",
+    "@typeholes/tserr-server": "^0.0.1",
     "arktype": "^1.0.14-alpha",
     "axios": "^1.0.0",
     "express": "~4.18.1",
@@ -14,8 +16,7 @@
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "ts-morph": "^18.0.0",
-    "tslib": "^2.3.0",
-    "vscode": "^1.1.37"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@nx/cypress": "16.3.1",
@@ -32,6 +33,7 @@
     "@types/jest": "^29.4.0",
     "@types/marked": "^4.0.8",
     "@types/node": "18.7.1",
+    "@types/vscode": "^1.79.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "@vitejs/plugin-vue": "^4.2.3",
@@ -51,6 +53,7 @@
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "^5.0.4",
+    "verdaccio": "^5.25.0",
     "vite": "^4.3.4",
     "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
