--- a/packages/tserr-server/tsconfig.lib.json
+++ b/packages/tserr-server/tsconfig.lib.json
@@ -1,11 +1,11 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["node"],
-    "strict": true,
+    "outDir": "../../dist/out-tsc",
+    "declaration": true,
+    "types": ["node"]
   },
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts", "../tserr-common/src/lib/Err.ts"]
+  "include": ["src/**/*.ts"]
 }
