--- a/packages/tserr-ts-morph/project.json
+++ b/packages/tserr-ts-morph/project.json
@@ -1,32 +1,32 @@
 {
-  "name": "tserr-server",
+  "name": "tserr-ts-morph",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "packages/tserr-server/src",
+  "sourceRoot": "packages/tserr-ts-morph/src",
   "projectType": "library",
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/packages/tserr-server",
-        "tsConfig": "packages/tserr-server/tsconfig.lib.json",
-        "packageJson": "packages/tserr-server/package.json",
-        "main": "packages/tserr-server/src/index.ts",
-        "assets": ["packages/tserr-server/*.md"]
+        "outputPath": "dist/packages/tserr-ts-morph",
+        "tsConfig": "packages/tserr-ts-morph/tsconfig.lib.json",
+        "packageJson": "packages/tserr-ts-morph/package.json",
+        "main": "packages/tserr-ts-morph/src/index.ts",
+        "assets": ["packages/tserr-ts-morph/*.md"]
       }
     },
     "lint": {
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["packages/tserr-server/**/*.ts"]
+        "lintFilePatterns": ["packages/tserr-ts-morph/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/tserr-server/jest.config.ts",
+        "jestConfig": "packages/tserr-ts-morph/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
