--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,9 @@
     "paths": {
       "@typeholes/tserr-arktype": ["packages/tserr-arktype/src/index.ts"],
       "@typeholes/tserr-common": ["packages/tserr-common/src/index.ts"],
+      "@typeholes/tserr-server": ["packages/tserr-server/src/index.ts"],
+      "@typeholes/tserr-server-old": ["packages/tserr-server-old/src/index.ts"],
+      "@typeholes/tserr-ts-morph": ["packages/tserr-ts-morph/src/index.ts"],
       "@typeholes/tserr-vscode": ["packages/tserr-vscode/src/index.ts"]
     },
     "noErrorTruncation": true
