--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "dependencies": {
     "@typeholes/tserr-common": "^0.0.1",
     "@typeholes/tserr-server": "^0.0.1",
+    "@typeholes/tserr-ts-morph": "^0.0.1",
+    "@typeholes/tserr-vscode": "^0.0.1",
+    "0.0.1": "^1.0.1",
     "arktype": "^1.0.14-alpha",
     "axios": "^1.0.0",
     "express": "~4.18.1",
