--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "@typeholes/source",
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.1",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "prepare": "husky install"
+  },
   "private": true,
   "dependencies": {
+    "0.0.1": "^1.0.1",
     "@typeholes/tserr-common": "^0.0.1",
     "@typeholes/tserr-server": "^0.0.1",
     "@typeholes/tserr-ts-morph": "^0.0.1",
     "@typeholes/tserr-vscode": "^0.0.1",
-    "0.0.1": "^1.0.1",
     "arktype": "^1.0.14-alpha",
     "axios": "^1.0.0",
     "express": "~4.18.1",
@@ -22,6 +24,8 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.0",
+    "@commitlint/config-conventional": "^17.0.0",
     "@nx/cypress": "16.3.1",
     "@nx/esbuild": "16.3.1",
     "@nx/eslint-plugin": "16.3.1",
@@ -32,6 +36,7 @@
     "@nx/vite": "16.3.1",
     "@nx/web": "^16.3.1",
     "@nx/workspace": "16.3.1",
+    "@theunderscorer/nx-semantic-release": "^2.4.0",
     "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
     "@types/marked": "^4.0.8",
@@ -47,6 +52,7 @@
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "husky": "^8.0.0",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jsdom": "~20.0.3",
@@ -63,5 +69,12 @@
     "vite-tsconfig-paths": "^4.0.2",
     "vitest": "^0.31.0",
     "vue": "^3.3.4"
+  },
+  "nxrelease": {
+    "repositoryUrl": "https://github.com/typeholes/tserr",
+    "dryRun": true,
+    "branches": [
+      "alpha"
+    ]
   }
 }
