--- a/project.json
+++ b/project.json
@@ -2,6 +2,9 @@
   "name": "@typeholes/source",
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "targets": {
+    "semantic-release": {
+      "executor": "@theunderscorer/nx-semantic-release:semantic-release"
+    },
     "local-registry": {
       "executor": "@nx/js:verdaccio",
       "options": {
