chore(tserr-arktype-plugin): dummy update

--- a/packages/tserr-arktype-plugin/package.json
+++ b/packages/tserr-arktype-plugin/package.json
@@ -4,6 +4,7 @@
   "nxrelease": {
     "repositoryUrl": "https://github.com/typeholes/tserr",
     "npm": true,
+    "npmPublish": true,
     "github": false,
     "ci": false
   }
