fix(tserr-arktype-plugin): dummy update

--- a/packages/tserr-arktype-plugin/package.json
+++ b/packages/tserr-arktype-plugin/package.json
@@ -6,6 +6,7 @@
     "npm": true,
     "npmPublish": true,
     "github": false,
-    "ci": false
+    "ci": false,
+    "buildTarget": "build"
   }
 }
