--- a/packages/tserr-arktype-plugin/package.json
+++ b/packages/tserr-arktype-plugin/package.json
@@ -7,6 +7,7 @@
     "npmPublish": true,
     "github": false,
     "ci": false,
-    "buildTarget": "build"
+    "buildTarget": "build",
+    "outputPath": "${WORKSPACE_DIR}/dist/packages/${PROJECT_NAME}"
   }
 }
