fix(tserr-arktype-plugin): dummy update

--- a/packages/tserr-arktype/project.json
+++ b/packages/tserr-arktype/project.json
@@ -24,6 +24,12 @@
           "codeCoverage": true
         }
       }
+    },
+    "version": {
+      "executor": "@jscutlery/semver:version",
+      "options": {
+        "preset": "conventional"
+      }
     }
   },
   "tags": []
