--- a/packages/tserr-standalone-e2e/project.json
+++ b/packages/tserr-standalone-e2e/project.json
@@ -17,6 +17,12 @@
       "options": {
         "lintFilePatterns": ["packages/tserr-server-e2e/**/*.{js,ts}"]
       }
+    },
+    "version": {
+      "executor": "@jscutlery/semver:version",
+      "options": {
+        "preset": "conventional"
+      }
     }
   }
 }
