--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@typeholes/source",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {},
   "private": true,
   "dependencies": {
+    "0.0.1": "^1.0.1",
     "@typeholes/tserr-common": "^0.0.1",
     "@typeholes/tserr-server": "^0.0.1",
     "@typeholes/tserr-ts-morph": "^0.0.1",
     "@typeholes/tserr-vscode": "^0.0.1",
-    "0.0.1": "^1.0.1",
     "arktype": "^1.0.14-alpha",
     "axios": "^1.0.0",
     "express": "~4.18.1",
@@ -22,6 +22,9 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.0",
+    "@commitlint/config-conventional": "^17.0.0",
+    "@jscutlery/semver": "^3.0.0",
     "@nx/cypress": "16.3.1",
     "@nx/esbuild": "16.3.1",
     "@nx/eslint-plugin": "16.3.1",
@@ -47,6 +50,7 @@
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "husky": "^8.0.0",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jsdom": "~20.0.3",
