--- a/packages/tserr-arktype-plugin/project.json
+++ b/packages/tserr-arktype-plugin/project.json
@@ -1,32 +1,36 @@
 {
-  "name": "tserr-ts-morph",
+  "name": "tserr-arktype-plugin",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "packages/tserr-ts-morph/src",
+  "sourceRoot": "packages/tserr-arktype-plugin/src",
   "projectType": "library",
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/packages/tserr-ts-morph",
-        "tsConfig": "packages/tserr-ts-morph/tsconfig.lib.json",
-        "packageJson": "packages/tserr-ts-morph/package.json",
-        "main": "packages/tserr-ts-morph/src/index.ts",
-        "assets": ["packages/tserr-ts-morph/*.md"]
+        "outputPath": "dist/packages/tserr-arktype-plugin",
+        "tsConfig": "packages/tserr-arktype-plugin/tsconfig.lib.json",
+        "packageJson": "packages/tserr-arktype-plugin/package.json",
+        "main": "packages/tserr-arktype-plugin/src/index.ts",
+        "assets": ["packages/tserr-arktype-plugin/*.md"]
       }
+    },
+    "publish": {
+      "command": "node tools/scripts/publish.mjs tserr-arktype-plugin {args.ver} {args.tag}",
+      "dependsOn": ["build"]
     },
     "lint": {
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["packages/tserr-ts-morph/**/*.ts"]
+        "lintFilePatterns": ["packages/tserr-arktype-plugin/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/tserr-ts-morph/jest.config.ts",
+        "jestConfig": "packages/tserr-arktype-plugin/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
