--- a/packages/tserr-standalone/project.json
+++ b/packages/tserr-standalone/project.json
@@ -72,6 +72,12 @@
           "codeCoverage": true
         }
       }
+    },
+    "version": {
+      "executor": "@jscutlery/semver:version",
+      "options": {
+        "preset": "conventional"
+      }
     }
   },
   "tags": []
