--- a/packages/tserr-vscode/project.json
+++ b/packages/tserr-vscode/project.json
@@ -6,35 +6,25 @@
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/packages/tserr-vscode",
         "tsConfig": "packages/tserr-vscode/tsconfig.lib.json",
         "packageJson": "packages/tserr-vscode/package.json",
         "main": "packages/tserr-vscode/src/index.ts",
-        "assets": [
-          "packages/tserr-vscode/*.md"
-        ]
+        "assets": ["packages/tserr-vscode/*.md"]
       }
     },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "packages/tserr-vscode/**/*.ts"
-        ]
+        "lintFilePatterns": ["packages/tserr-vscode/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "packages/tserr-vscode/jest.config.ts",
         "passWithNoTests": true
@@ -44,6 +34,12 @@
           "ci": true,
           "codeCoverage": true
         }
+      }
+    },
+    "version": {
+      "executor": "@jscutlery/semver:version",
+      "options": {
+        "preset": "conventional"
       }
     }
   },
