--- a/packages/tserr-arktype-plugin/project.json
+++ b/packages/tserr-arktype-plugin/project.json
@@ -6,29 +6,41 @@
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/packages/tserr-arktype-plugin",
         "tsConfig": "packages/tserr-arktype-plugin/tsconfig.lib.json",
         "packageJson": "packages/tserr-arktype-plugin/package.json",
         "main": "packages/tserr-arktype-plugin/src/index.ts",
-        "assets": ["packages/tserr-arktype-plugin/*.md"]
+        "assets": [
+          "packages/tserr-arktype-plugin/*.md"
+        ]
       }
     },
     "publish": {
       "command": "node tools/scripts/publish.mjs tserr-arktype-plugin {args.ver} {args.tag}",
-      "dependsOn": ["build"]
+      "dependsOn": [
+        "build"
+      ]
     },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["packages/tserr-arktype-plugin/**/*.ts"]
+        "lintFilePatterns": [
+          "packages/tserr-arktype-plugin/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "packages/tserr-arktype-plugin/jest.config.ts",
         "passWithNoTests": true
@@ -41,9 +53,15 @@
       }
     },
     "version": {
+      "dependsOn": [
+        "build"
+      ],
       "executor": "@jscutlery/semver:version",
       "options": {
-        "preset": "conventional"
+        "preset": "conventional",
+        "postTargets": [
+          "tserr-arktype-plugin:publish"
+        ]
       }
     }
   },
