--- a/packages/tserr-vscode/tsconfig.json
+++ b/packages/tserr-vscode/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "module": "commonjs"
+    "module": "commonjs",
+    "paths": {
+      "hack/*": ["../../../dist/packages/"]
+    }
   },
   "files": [],
   "include": [],
