--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@quasar/extras": "^1.16.4",
     "@typeholes/tserr-common": "^0.0.1",
     "@typeholes/tserr-server": "^0.0.1",
     "@typeholes/tserr-ts-morph": "^0.0.1",
@@ -14,14 +15,13 @@
     "axios": "^1.0.0",
     "express": "~4.18.1",
     "marked": "^4.3.0",
+    "quasar": "^2.12.0",
     "shiki": "^0.14.1",
     "shiki-themes": "^0.2.7",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "ts-morph": "^18.0.0",
-    "tslib": "^2.3.0",
-    "vite-plugin-vuetify": "^1.0.2",
-    "vuetify": "^3.3.3"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.0",
@@ -38,6 +38,7 @@
     "@nx/vite": "16.3.1",
     "@nx/web": "^16.3.1",
     "@nx/workspace": "16.3.1",
+    "@quasar/vite-plugin": "^1.4.0",
     "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
     "@types/marked": "^4.0.8",
@@ -60,6 +61,7 @@
     "nx": "16.3.1",
     "prettier": "^2.6.2",
     "rollup-plugin-visualizer": "^5.9.0",
+    "sass": "^1.32.12",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "^5.0.4",
