--- a/error_samples/tsconfig.json
+++ b/error_samples/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "ES2020",
-    "lib": ["ES2020", "DOM"],
+    "lib": ["ES2020", "DOM","NoSuchLib"],
     "outDir": "./out",
     "sourceMap": true,
     //		"rootDir": "src",
