--- a/packages/tserr-vscode/package.json
+++ b/packages/tserr-vscode/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "@typeholes/tserr-vscode",
+  "name": "tserr-vscode",
   "publisher": "typeholes",
   "version": "0.0.1",
-  "main": "./src/index.js",
+  "main": "./index.js",
+  "repository": "https://github.com/typeholes/tserr",
+  "license": "MIT",
   "engines": {
     "vscode": "^1.44.0"
   },
+  "activationEvents": [
+    "*"
+  ],
   "contributes": {
     "commands": [
       {
