--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@jscutlery/semver": "^3.0.0",
     "@mdi/font": "^7.2.96",
     "@quasar/vite-plugin": "^1.4.0",
+    "@swc/core": "^1.3.68",
     "@types/express": "~4.17.13",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.3",
     "@types/marked": "^4.0.8",
+    "@types/mocha": "^10.0.1",
     "@types/node": "18.7.1",
     "@types/vscode": "^1.79.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
@@ -40,20 +42,34 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "husky": "^8.0.0",
-    "jest": "^29.4.1",
-    "jest-environment-node": "^29.4.1",
+    "jest": "^29.6.1",
     "jsdom": "~20.0.3",
+    "mocha": "^10.2.0",
     "prettier": "^2.6.2",
     "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.32.12",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "^5.1.3",
+    "typescript": "^5.1.6",
     "vite": "^4.3.4",
     "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
     "vitest": "^0.31.0",
     "vue": "^3.3.4"
+  },
+  "mocha": {
+    "spec": [
+      "./packages/**/test/*.test.*"
+    ],
+    "ignore": "**/node_modules/*",
+    "require": "ts-node/register",
+    "node-option": [
+      "loader=ts-node/esm",
+      "no-warnings=ExperimentalWarning"
+    ],
+    "extension": [
+      "ts"
+    ]
   }
 }
