--- a/packages/tserr-server/package.json
+++ b/packages/tserr-server/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@typeholes/tserr-server",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "devDependencies": {
+    "mocha": "^10.2.0"
+  }
 }
