feat: broad error equivalence (WIP)

--- a/packages/tserr-vue/tsconfig.json
+++ b/packages/tserr-vue/tsconfig.json
@@ -16,7 +16,7 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "skipLibCheck": true,
-    "types": ["vite/client", "vitest"]
+    "types": ["vite/client", "vitest"],
   },
   "include": ["src"],
   "references": [
