--- a/packages/tserr-vscode/.vscode/tasks.json
+++ b/packages/tserr-vscode/.vscode/tasks.json
@@ -2,15 +2,20 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "type": "npm",
-      "script": "compile",
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      },
+      "type": "shell",
+      "command": "npx",
+      "args": [
+        "esbuild",
+        "src/index.ts",
+        "--outdir=out",
+        "--sourcemap",
+        "--platform=node",
+        "--external:vscode",
+        "--bundle"
+      ],
       "problemMatcher": [],
-      "label": "npm: compile",
-      "detail": "npx esbuild --bundle src/index.ts --outdir=out --sourcemap --platform=node --external:vscode"
+      "label": "esbuild debug tserr-vscode",
+      "group": "build"
     }
   ]
 }
