chore: related states

--- a/packages/tserr-ssr/tsconfig.json
+++ b/packages/tserr-ssr/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@quasar/app-vite/tsconfig-preset",
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "noErrorTruncation": true
   }
 }
