--- a/packages/tserr-ssr/tsconfig.json
+++ b/packages/tserr-ssr/tsconfig.json
@@ -2,6 +2,10 @@
   "extends": "@quasar/app-vite/tsconfig-preset",
   "compilerOptions": {
     "baseUrl": ".",
-    "noErrorTruncation": true
-  }
+    "noErrorTruncation": true,
+    "paths": {
+      "@typeholes/tserr-common": ["../../packages/tserr-common/src/index"]
+    }
+  },
+
 }
