--- a/packages/tserr-ssr/package.json
+++ b/packages/tserr-ssr/package.json
@@ -13,6 +13,7 @@
     "build": "quasar build"
   },
   "dependencies": {
+    "@electron/remote": "^2.1.0",
     "@quasar/extras": "^1.16.4",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
@@ -25,13 +26,15 @@
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
+    "@vue/compiler-sfc": "file: node_modules/@vue/compiler-sfc",
     "autoprefixer": "^10.4.2",
+    "electron": "^v27.1.0",
+    "electron-packager": "^17.1.2",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "prettier": "^2.5.1",
-    "typescript": "^5.2.2",
-    "@vue/compiler-sfc": "file: node_modules/@vue/compiler-sfc"
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
