chore: recreated quasar package as tserr-electron

--- a/packages/tserr-common/package.json
+++ b/packages/tserr-common/package.json
@@ -1,5 +1,7 @@
 {
   "name": "@typeholes/tserr-common",
   "version": "0.0.1",
-  "type": "commonjs"
+  "type": "commonjs",
+  "exports": "./out/index.js",
+  "types": "./out/index.d.ts"
 }
