--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "electron": "^27.1.0",
     "express": "~4.18.1",
     "marked": "^4.3.0",
-    "quasar": "^2.12.0",
     "shiki": "^0.14.1",
     "shiki-themes": "^0.2.7",
     "socket.io": "^4.6.1",
@@ -30,12 +29,12 @@
     "@types/express": "~4.17.13",
     "@types/jest": "^29.5.3",
     "@types/marked": "^4.0.8",
-    "@types/mocha": "^10.0.1",
     "@types/node": "18.7.1",
     "@types/vscode": "^1.79.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "@vitejs/plugin-vue": "^4.2.3",
+    "vue": "^3.0.0",
     "@vitest/coverage-c8": "^0.31.0",
     "@vitest/ui": "^0.31.0",
     "cypress": "^12.11.0",
@@ -57,8 +56,7 @@
     "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
-    "vitest": "^0.31.0",
-    "vue": "^3.3.4"
+    "vitest": "^0.31.0"
   },
   "mocha": {
     "spec": [
