--- a/packages/tserr-common/tsconfig.json
+++ b/packages/tserr-common/tsconfig.json
@@ -8,7 +8,10 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["vitest"]
+    "types": ["vitest"],
+    "resolveJsonModule": true,
+    "declaration": true,
+    "outDir": "./out"
   },
   "files": [],
   "include": [],
