--- a/packages/tserr-watcher/package.json
+++ b/packages/tserr-watcher/package.json
@@ -3,5 +3,8 @@
   "version": "0.0.1",
   "devDependencies": {
     "mocha": "^10.2.0"
+  },
+  "dependencies": {
+    "@typeholes/tserr-common": "file:../tserr-common/typeholes-tserr-common-0.0.1.tgz"
   }
 }
