--- a/packages/tserr-electron/tsconfig.json
+++ b/packages/tserr-electron/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "noErrorTruncation": true,
+    "skipLibCheck": true
   },
+    "exclude": ["./node_modules/**", "tmp"]
 
 }
