--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "dependencies": {
     "@quasar/extras": "^1.16.4",
-    "arktype": "^1.0.14-alpha",
+    "@typeholes/tserr-common": "file:packages/tserr-common/typeholes-tserr-common-0.0.1.tgz",
+    "arktype": "^1.1.0-dev-2",
     "axios": "^1.0.0",
     "electron": "^27.1.0",
     "express": "~4.18.1",
@@ -34,7 +35,6 @@
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "@vitejs/plugin-vue": "^4.2.3",
-    "vue": "^3.0.0",
     "@vitest/coverage-c8": "^0.31.0",
     "@vitest/ui": "^0.31.0",
     "cypress": "^12.11.0",
@@ -56,7 +56,8 @@
     "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
-    "vitest": "^0.31.0"
+    "vitest": "^0.31.0",
+    "vue": "^3.0.0"
   },
   "mocha": {
     "spec": [
