--- a/packages/tserr-watcher/tsconfig.json
+++ b/packages/tserr-watcher/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "esModuleInterop": true
+    "esModuleInterop": false
   },
   "files": [],
   "include": [],
