--- a/packages/tserr-electron/.gitignore
+++ b/packages/tserr-electron/.gitignore
@@ -5,6 +5,7 @@ node_modules
 # Quasar core related directories
 .quasar
 /dist
+/builds
 /quasar.config.*.temporary.compiled*
 
 # Cordova related directories and files
@@ -35,3 +36,4 @@ yarn-error.log*
 
 # local .env files
 .env.local*
+
