--- a/packages/tserr-electron/package.json
+++ b/packages/tserr-electron/package.json
@@ -40,7 +40,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "prettier": "^2.5.1",
-    "typescript": "^5.2.2"
+    "typescript": "file:../../../../TypeScript"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
